[gd_scene load_steps=19 format=3 uid="uid://b5y0q5dw3q8ak"]

[ext_resource type="Script" path="res://Procedural Generation/Objects/Tree/tree.gd" id="1_a6kii"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0sl7g"]
albedo_color = Color(0.380392, 0.137255, 0.0156863, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_h5e36"]
material = SubResource("StandardMaterial3D_0sl7g")
top_radius = 0.3
bottom_radius = 0.3
rings = 3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o6fcb"]
radius = 0.477236

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wr3wl"]
albedo_color = Color(0.439216, 0.717647, 0.341176, 1)

[sub_resource type="SphereMesh" id="SphereMesh_v0djh"]
material = SubResource("StandardMaterial3D_wr3wl")
radius = 1.0
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_1542o"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c0grr"]
albedo_color = Color(0.439216, 0.717647, 0.341176, 1)

[sub_resource type="SphereMesh" id="SphereMesh_24oum"]
material = SubResource("StandardMaterial3D_c0grr")
radius = 0.75
height = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_pn0lr"]
radius = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rnx5b"]
albedo_color = Color(0.439216, 0.717647, 0.341176, 1)

[sub_resource type="SphereMesh" id="SphereMesh_au0ih"]
material = SubResource("StandardMaterial3D_rnx5b")
radius = 0.75
height = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_wcjfc"]
radius = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ll31c"]
albedo_color = Color(0.439216, 0.717647, 0.341176, 1)

[sub_resource type="SphereMesh" id="SphereMesh_0ohxa"]
material = SubResource("StandardMaterial3D_ll31c")

[sub_resource type="SphereShape3D" id="SphereShape3D_kg5v8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cmjvs"]
height = 5.0
radius = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fp3cc"]
height = 2.196
radius = 0.1

[node name="StaticBody3D" type="StaticBody3D" groups=["tree"]]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
script = ExtResource("1_a6kii")

[node name="trunk" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.80716, 0)
mesh = SubResource("CylinderMesh_h5e36")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.80716, 0)
shape = SubResource("CylinderShape3D_o6fcb")

[node name="leaves1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41263, 0)
mesh = SubResource("SphereMesh_v0djh")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41263, 0)
shape = SubResource("SphereShape3D_1542o")

[node name="leaves2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.391477, 2.5815, 0.144952)
mesh = SubResource("SphereMesh_24oum")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.391477, 2.5815, 0.144952)
shape = SubResource("SphereShape3D_pn0lr")

[node name="leaves3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146188, 2.08754, -0.461026)
mesh = SubResource("SphereMesh_au0ih")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146188, 2.08754, -0.461026)
shape = SubResource("SphereShape3D_wcjfc")

[node name="leaves4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.69135, 2.7879, 0.531083)
mesh = SubResource("SphereMesh_0ohxa")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.69135, 2.7879, 0.531083)
shape = SubResource("SphereShape3D_kg5v8")

[node name="spawnRadius" type="Area3D" parent="." groups=["tree_area"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.80716, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="spawnRadius"]
shape = SubResource("CylinderShape3D_cmjvs")

[node name="marker" type="Area3D" parent="." groups=["tree_area"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 1.61481, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="marker"]
shape = SubResource("CylinderShape3D_fp3cc")

[node name="Timer" type="Timer" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]

[node name="treehealth" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.0468, 0)

[connection signal="reproduce" from="." to="." method="_on_reproduce"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
